[package]
name = "recfiles"
description = "A library for managing GNU Recfiles"
version = "0.1.0"
authors = ["Oliver Ford <dev@ojford.com>"]
repository = "https://github.com/OJFord/recfiles-rs"
license = "MIT"
edition = "2018"

[dependencies]
serde = {version = "^1.0", features=["derive"]}

[dev-dependencies.serde_rec]
path = "../serde_rec"
